# TricorderKit

./: .check-anon-ignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json  AGENTS.md  Architecture_Adaptee_Instructions.md  BOOTSTRAP.md  BOOT_SUMMARY.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  Makefile  README.md  README_FIRST.md  ROADMAP.md  RUNBOOK_INFRA.md  SPACE_CORE.md  STATUS.md  TricorderKit_Audit_v0.8_2026-05-18.md  docker-compose.yml  pytest.ini  requirements-dev.txt
.claude/: settings.json
.claude-plugin/: marketplace.json
.githooks/: pre-push
.planning/: AUDIT_INTEGRATION_5FICHIERS_2026-06.md  DEC-047_docs_coherence.md  DEC-049_docs_coherence.md  DECISIONS.md  G1_durcissement_patch.md  PLAN_v1.0_SELF_IMPROVING_2026-06-11.md  QUEUE.md  RISKS.md  ROADMAP_v0.7.md  ROADMAP_v0.9.md  RUNBOOK_EXPLOITATION_v1.0_2026-06-11.md  STATE.md  TASKS.md
.semgrep/: no-shell-true.yaml
.tricorderkit/: context_sources.yaml  install_profile.yml  known_errors.yml  memory_router.yaml  phase_gates.yml  state.yml  vault_optimizer.config.json
TricorderKit_v0.7/: CLAUDE.md  docker-compose.yml
_sync_antigravity/: PROTOCOL_REALTIME.md
canal_agents/: PROTOCOL.md
cli/: README.md  tk.py
cowork-scheduled-tasks/: CRONS.md
docs/: 00_WHAT_IS_TRICORDERKIT.md  01_HOW_IT_WORKS.md  02_WHAT_IS_IN_PLACE.md  03_WHAT_TO_DO_NEXT.md  04_LLM_OPERATING_GUIDE.md  05_hooks_policy.md  06_workflow_standard.md  07_SECOND_BRAIN_ROUTING.md  08_CONTEXT_POLICY.md  09_GOVERNANCE_GUARDRAILS.md  BLUEPRINT_AIOPS_GAP_2026-06-19.md  INFRA.md  ROADMAP_NETNEW_AIOPS.md  anonymization.md  architecture.md  cli_forge_typer_standard.md  linked_projects.md
mcp/: MCP_AUTH_DIAGNOSTIC.md  README.md  (+2 more)
plugins/security-audit-cli/: README.md  SKILL.md  anonymization_checker.py  manifest.yml  pattern_checker.py  pyproject.toml  secret_scanner.py  security_runner.py
plugins/security-audit-cli/.claude-plugin/: plugin.json
plugins/security-audit-cli/scripts/: security_runner.py
plugins/security-audit-cli/skills/security-audit-cli/: SKILL.md
plugins/security-audit-cli/tests/: test_security_runner.py
tools/jp-scraper/: README.md  pyproject.toml  requirements.txt
tools/jp-scraper/config/: robots_policy.yaml  selectors.yaml  sources.yaml  token_policy.yaml
tools/jp-scraper/src/jp_scraper/: cli.py
tools/jp-scraper/src/jp_scraper/collectors/: http_collector.py  router.py  rss_collector.py
tools/jp-scraper/src/jp_scraper/config/: sources.yaml
tools/jp-scraper/src/jp_scraper/extractors/: html_extractor.py  trafilatura_extractor.py
tools/jp-scraper/src/jp_scraper/normalizers/: japanese_text.py
tools/jp-scraper/src/jp_scraper/reports/: audit.py  summary.py
tools/jp-scraper/src/jp_scraper/storage/: config.py  delta.py  hashing.py  jsonl.py
tools/mangatracker-cli/: README.md  pyproject.toml
tools/mangatracker-cli/config/: sources.yaml
tools/mangatracker-cli/docs/: ARCHITECTURE.md  MCP_STRATEGY.md
tools/mangatracker-cli/examples/: example_commands.sh
tools/mangatracker-cli/mangatracker_cli/: cli.py
tools/mangatracker-cli/mangatracker_cli/commands/: anime.py  audit.py  events.py  game.py  goods.py  ln.py  manga.py  seiyu.py  studio.py  sync.py
tools/mangatracker-cli/mangatracker_cli/connectors/: http.py  parsers.py
tools/mangatracker-cli/mangatracker_cli/core/: exporter.py  models.py  registry.py
tools/mangatracker-cli/mangatracker_cli/schemas/: work_record.schema.json
(+443 files in other folders)
