[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tricorderkit-security-audit-cli"
version = "0.1.0"
description = "TricorderKit — Security Audit CLI (Phase 5)"
requires-python = ">=3.11"

dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
include = ["security_runner.py"]

[project.scripts]
security-runner = "security_runner:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["security_runner"]
omit = ["tests/*"]
